--- a/Labs/Lab-3/package.json
+++ b/Labs/Lab-3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lession1",
+  "name": "test",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -7,22 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
+    "@eslint/js": "^9.14.0",
     "@vitejs/plugin-vue": "^5.1.4",
-    "@vue/eslint-config-prettier": "^10.0.0",
-    "eslint": "^9.13.0",
-    "eslint-plugin-vue": "^9.29.0",
-    "prettier": "^3.3.3",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
     "vite": "^5.4.10",
-    "vite-plugin-vue-devtools": "^7.5.3"
+    "vite-plugin-vue-devtools": "^7.5.4"
   }
 }
