--- a/lession1/package.json
+++ b/lession1/package.json
@@ -11,7 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "json-server": "^0.17.4",
+    "lucide-vue-next": "^0.460.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
